fix gap

--- a/client/src/components/Projects/style.scss
+++ b/client/src/components/Projects/style.scss
@@ -12,7 +12,7 @@
   }
 
   @media (max-width: 480px) {
-    gap: 4rem;
+    gap: 6rem;
   }
 
   ul {
